[package]
name = "canvas2png"
version = "0.1.1"
authors = ["wagao <wagao1029@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
png = "0.17.13"
bitvec = "1.0.1"

[profile.release]
opt-level = "s"
